@@ -2,6 +2,7 @@
 * Post-DiFX-2.0.1
 * Infrastructure for az, el, parallactic angle in model added
 * Tcal managing structures and functions added
+* Bug fix: simplifyDifxRules: allow number of rules to go to zero
 
 3.0.1
 * Post DiFX-2.0.0
